--- a/xliff/zh-Hans.xlf
+++ b/xliff/zh-Hans.xlf
@@ -1,49 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-<file target-language="ar" source-language="en" original="lit-localize-inputs" datatype="plaintext">
+<file target-language="zh-Hans" source-language="en" original="lit-localize-inputs" datatype="plaintext">
 <body>
 <trans-unit id="s65aa9c025267e5cd">
   <source>Select your Android x86 Installation media or .ISO file to continue</source>
-  <target>translated text</target>
+  <target>选择Android x86的安装介质或.ISO文件，然后继续</target>
 </trans-unit>
 <trans-unit id="sae1c7f13b7c0c47f">
   <source>Start</source>
+  <target>开始安装</target>
 </trans-unit>
 <trans-unit id="s78e51a17af6607c3">
   <source>Create /data directory</source>
+  <target>创建/data目录</target>
 </trans-unit>
 <trans-unit id="s877c918c3f399cba">
   <source>Create data.img</source>
+  <target>创建data.img</target>
 </trans-unit>
 <trans-unit id="s26bf81a54b3c98fd">
   <source>Install for QEMU</source>
+  <target>安装到QEMU</target>
 </trans-unit>
 <trans-unit id="sc16e00a7a8b2fde2">
   <source>Back</source>
+  <target>返回</target>
 </trans-unit>
 <trans-unit id="sff3418011f0f7a2f">
   <source>Extracting ISO</source>
+  <target>正在从ISO提取文件</target>
 </trans-unit>
 <trans-unit id="s4396b8c2cb0d7d78">
   <source>Open /etc/grub.d/40_custom or /boot/grub/grub.cfg in a text editor</source>
+  <target>用文本编辑器打开/etc/grub.d/40_custom或/boot/grub/grub.cfg</target>
 </trans-unit>
 <trans-unit id="sc27dc998602cdc61">
   <source>Example:</source>
+  <target>例如：</target>
 </trans-unit>
 <trans-unit id="sb746ace08dc971f5">
   <source>Create a new grub entry with the following code: </source>
+  <target>用以下代码创建新的grub条目：</target>
 </trans-unit>
 <trans-unit id="sbc8741ff143d32f6">
   <source> After editing /etc/grub.d/40_custom, re-generate grub config with command:</source>
+  <target>修改完/etc/grub.d/40_custom后，使用以下命令重新生成grub配置：</target>
 </trans-unit>
 <trans-unit id="s701c80c5e6ceabf2">
   <source>The exact command to use may vary depending on your distro.</source>
+  <target>使用的具体命令可能会因发行版不同而有所差异。</target>
 </trans-unit>
 <trans-unit id="s0379fc73608ab971">
   <source>Done</source>
+  <target>已完成</target>
 </trans-unit>
 <trans-unit id="s997e405b72004048">
   <source>Creating data.img.. Please wait</source>
+  <target>正在创建data.img.. 请稍等</target>
 </trans-unit>
 </body>
 </file>
